syntax = "proto3";

package ServerDIR;  // Changed to match your directory structure

option java_multiple_files = true;
option java_package = "ServerDIR.grpc";  // Changed to match your directory structure
option java_outer_classname = "LLMProto";

service LLMService {
  rpc StreamConversation (ConversationRequest) returns (ConversationResponse) {}
}

message ConversationRequest {
  string prompt = 1;
  string model_id = 2;
  int32 max_token_count = 3;
  float temperature = 4;
  float top_p = 5;
}

message ConversationResponse {
  int32 input_text_token_count = 1;
  repeated CompletionResult results = 2;
}

message CompletionResult {
  int32 token_count = 1;
  string output_text = 2;
  string completion_reason = 3;
}